fixed footer display on mobile

--- a/src/Components/DesktopView/DesktopView.css
+++ b/src/Components/DesktopView/DesktopView.css
@@ -12,7 +12,7 @@
   right: 0;
 }
 
-.footer-txt {
+.desktop-footer-txt {
   color: gray;
   font-size: 14px;
   text-transform: uppercase;
@@ -28,6 +28,6 @@
   margin-left: 4rem;
 }
 
-.footer-txt > p {
+.dekstop-footer-txt > p {
   margin-left: 0.5rem;
 }
